examples/website/static/general.css
/* CSS variables determining appearance */
:root {
  --background: #fefefe;
  --border-color: #e0e0e0;
  --overlay-shadow-color: #d0d0d0;
  --color: #101010;
  --ui-background: #3030ff;
  --font-family: "Sabon", Garamond, serif;
  --page-padding: 1rem;
  --rubric-size: 0.9rem;
  --rubric-color: #ea0000;
  --error-color: rgb(234, 0, 0);
  --error-color-tint: rgba(234, 0, 0, 0.5);

  /* Navigation menu settings */
  --nav-button-height: 1.5rem;
  --menu-border-color: #f0f0f0;
  --nav-link-hover: #f0f0f0;

  /* Display Settings */
  --response-weight: bold;
  --response-style: normal;

  --psalm-number-display: inline-block;

  /* Generic UI styles */
  --ui-border-radius: 0.25rem;

  /* Toggle buttons */
  --ui-toggle-checked-color: #f0f0f0;
  --ui-toggle-checked-background: #c63232;
  --ui-toggle-unchecked-background: #f0f0f0;
  --ui-toggle-unchecked-background-hover: #f6abab;
}

/* Font Definitions */
@font-face {
  font-family: "Sabon";
  font-weight: normal;
  font-style: normal;
  src: url("/.perseus/static/fonts/Sabon_Roman.ttf");
}
@font-face {
  font-family: "Sabon";
  font-weight: normal;
  font-style: italic;
  src: url("/.perseus/static/fonts/Sabon_Italic.ttf");
}
@font-face {
  font-family: "Sabon";
  font-weight: bold;
  font-style: normal;
  src: url("/.perseus/static/fonts/Sabon_Bold.ttf");
}
@font-face {
  font-family: "Sabon";
  font-weight: bold;
  font-style: italic;
  src: url("/.perseus/static/fonts/Sabon_BoldItalic.ttf");
}

/* Styles applying to everything */
body {
  color: var(--color);
  background-color: var(--background);
  font-family: var(--font-family);
  margin: 0;
  padding: 0;
}

.__perseus_content > header {
  text-align: center;
  /* Floats along the top of the screen */
  position: sticky;
  top: 0;
  background: var(--background);
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  padding: 0.5rem;
  border-bottom: 1px solid var(--menu-border-color);
  min-height: 1.5rem;
}

.__perseus_content > header .page-title {
  font-variant: small-caps;
  font-size: 1.25rem;
  margin: 0;
}

.__perseus_content > main {
  display: block;
  margin: auto;
  max-width: calc(100vw - calc(2 * var(--page-padding)));
  padding: 0.25rem;
  width: 30rem;
}

@media (min-width: 767px) {
  .__perseus_content > main {
    width: 35rem;
  }
}

.centered {
  display: block;
  margin: auto;
  text-align: center;
}

.error {
  color: var(--error-color);
}

/* Hide things *only* visually, leaving them accessible to screen readers */
.screen-reader-only:not(:focus):not(:active) {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

/* Input Radio Toggles */
fieldset.toggle {
  display: flex;
  justify-content: space-around;
  padding: 0;
  border: none;
  width: fit-content;
  margin: 0.25rem auto;
}

fieldset.toggle label {
  background: var(--ui);
  text-align: center;
  padding: 0.5rem 0.25rem;
  cursor: pointer;
  border: 1px solid var(--ui-toggle-checked-background);
}

fieldset.toggle label:first-of-type {
  border-top-left-radius: var(--ui-border-radius);
  border-bottom-left-radius: var(--ui-border-radius);
}

fieldset.toggle label:last-of-type {
  border-top-right-radius: var(--ui-border-radius);
  border-bottom-right-radius: var(--ui-border-radius);
}

fieldset.toggle input + label {
  transition: border-color 0.15s ease-out, color 0.25s ease-out,
    background-color 0.15s ease-out, box-shadow 0.15s ease-out;
}

fieldset.toggle input:checked + label {
  background: var(--ui-toggle-checked-background);
  box-shadow: 0 0 10px rgba(var(--ui-toggle-checked-background), 0.5);
  color: var(--ui-toggle-checked-color);
  font-weight: bold;
}

fieldset.toggle input:not(:checked) + label {
  background: var(--ui-toggle-unchecked-background);
}

fieldset.toggle input:not(:checked) + label:hover {
  background: var(--ui-toggle-unchecked-background-hover);
}

/* Hide radio buttons *only* visually, leaving them accessible to screen readers */
fieldset.toggle input[type="radio"] {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

/* Stacked label-input pairs */
fieldset.stacked {
  display: flex;
  flex-direction: column;
  align-items: center;
  border: none;
}

fieldset.stacked label {
  font-weight: bold;
}

.hidden {
  display: none;
}

/* Nav Menu */
#main-menu {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
}

#main-menu input {
  /* hide it */
  opacity: 0;
  /* place above both hamburgers and menu itself */
  position: absolute;
  left: 0.5rem;
  top: 0.5rem;
  margin: 0;
  z-index: 5;
  height: var(--nav-button-height);
  width: var(--nav-button-height);
  cursor: pointer;
}

#main-menu .hamburger {
  position: absolute;
  left: 0.5rem;
  top: 0.5rem;
  height: var(--nav-button-height);
  width: var(--nav-button-height);
}

#main-menu input:not(:checked) ~ .hamburger {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  transition: 0.25s ease;
}

#main-menu span {
  display: block;
  width: var(--nav-button-height);
  height: 0.1rem;
  position: relative;
  background: var(--color);
  border-radius: 0.25rem;
  z-index: 3;
  transition: transform 0.25s cubic-bezier(0.77, 0.2, 0.05, 1.0), background 0.25s cubic-bezier(0.77, 0.2, 0.05, 1.0), opacity 0.25s ease;
}

#main-menu input:checked ~ .hamburger span {
  opacity: 1;
  transform: rotate(45deg) translate(-2px, -1px);
  background: var(--color);
  transition: 0.25s ease;
}

#main-menu input:checked ~ .hamburger {
  margin-top: 0.5rem;
}

/* Hidden middle line */
#main-menu input:checked ~ .hamburger span:nth-last-child(3) {
  opacity: 0;
  transform: rotate(0deg) scale(0.2, 0.2);
}

/* Reversed final line */
#main-menu input:checked ~ .hamburger span:nth-last-child(2) {
  transform: rotate(-45deg) translate(0, -1px);
}

/* Slide menu in */
#main-menu #nav-menu {
  background: var(--background);
  border-right: 1px solid var(--menu-border-color);
  position: absolute;
  top: 0;
  left: 0;
  margin: 0;
  padding: 0;
  padding-top: 0.5rem;
  height: 100vh;
  width: 100vw;
  max-width: 400px;
  list-style-type: none;
  -webkit-font-smoothing: antialiased;
  transform: translateX(-100%);
  transition: transform 0.25s cubic-bezier(0.77, 0.2, 0.05, 1.0);
  z-index: 2;
}

#main-menu input:checked ~ #nav-menu {
  box-shadow: 0 0 100px #606060;
  transform: none;
}

#main-menu .overlay {
  opacity: 0;
  z-index: -1;
}

#main-menu input:checked ~ .overlay {
  width: 100%;
  opacity: 0.25;
  background: black;
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  z-index: 1;
  transition: opacity 0.25s ease;
}

#main-menu #nav-menu li h1 {
  font-size: 1.5rem;
}

#main-menu #nav-menu li h1 a {
  padding: 0;
}

#main-menu #nav-menu li {
  align-items: center;
  border-bottom: 1px solid var(--menu-border-color);
  display: flex;
  height: 2rem;
  justify-content: center;
  text-align: center;
}

#main-menu #nav-menu li:not(:first-of-type):hover {
  background: var(--nav-link-hover);
}

#main-menu a {
  color: var(--color);
  text-decoration: none;
  padding: 0.5rem;
  width: 100%;
}

